feat: 프로메테우스 기능 추가